--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,20 @@
 # JDBC properties
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.username=rokuuser
+spring.datasource.password=password
+
+#
+# Log JDBC sql statement
+#
+# Only use this for dev/testing
+#Don't use this for production as it will log user names. It's a security risk
+
+logging.level.org.springframework.jdbc.core=TRACE
+
+## After this is done, update spring security config to use JDBC
+
+logging.level.org.springframework.security=TRACE
+
+
+
