--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@
 #
 # JDBC properties
 #
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
-spring.datasource.username=rokuuser
+spring.datasource.url=jdbc:mysql://localhost:3306/roku_directory
+spring.datasource.username=roku
 spring.datasource.password=password
 
 #
