so currently we have the code reading from an employee database. We can view the employees, and an update button and the code for handling the button has been made, but the update button doesn't work yet.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,6 @@ logging.level.org.springframework.jdbc.core=TRACE
 
 logging.level.org.springframework.security=TRACE
 
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
