so I added the form for the prescription management but there is an issue with the id, it's getting an error.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,9 @@ logging.level.org.springframework.security=TRACE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+#
+# Medication drop down menue
+#
+
+meds=Ibuprofen, High Blood Pressure Medicine, diabetes medicine, paracetamol, cough drop 
+
