so so far, I think I have the DTO mapped out. Did it manually, pretty quick and dirty, sure there are better ways to do it, but oh well, it's done, and there are no bugs.... yet... so let's see how we go from here

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
 			<version>6.0.53</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- Dependency for the model mapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version>
+		</dependency>
 	</dependencies>
 
 
