so this is the code so far filling in the form with the DTO, but I'm going to change things around. Instead of prepopulating the form with the DTO, I'm going to prepopulate with the entity, and when I then send the form, I convert the entitiy into a DTO to send to the gRPC server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 meds=Ibuprofen, High Blood Pressure Medicine, diabetes medicine, paracetamol, cough drop 
 
+
+#
+# debugging
+#
+logging.level.org.springframework.web=DEBUG
