--- a/pom.xml
+++ b/pom.xml
@@ -94,10 +94,15 @@
 			<version>6.0.53</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.devh/grpc-client-spring-boot-starter -->
 		<dependency>
 			<groupId>net.devh</groupId>
 			<artifactId>grpc-client-spring-boot-starter</artifactId>
+			<version>2.15.0.RELEASE</version>
 		</dependency>
+
+
+
 		<!-- Dependency for the model mapper -->
 		<dependency>
 			<groupId>org.modelmapper</groupId>
