--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
 			<version>6.0.53</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-server-spring-boot-starter</artifactId>
+			<version>2.15.0.RELEASE</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/net.devh/grpc-client-spring-boot-starter -->
 		<dependency>
 			<groupId>net.devh</groupId>
